infrastructure/unbound/02-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  namespace: unbound
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: unbound
                topologyKey: kubernetes.io/hostname
      containers:
        - name: unbound
          image: mvance/unbound:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /opt/unbound/etc/unbound/unbound.conf
              subPath: unbound.conf
              readOnly: true
            - name: rpz
              mountPath: /blocklist
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: unbound-config
        - name: rpz
          persistentVolumeClaim:
            claimName: rpz-blocklist
