infrastructure/unbound/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound-lb
  namespace: unbound
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: metallb-pool
spec:
  type: LoadBalancer
  selector:
    app: unbound
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53
  externalTrafficPolicy: Cluster
